# champollion

./: .gitattributes  .gitignore  README.md  pyproject.toml
.github/workflows/: build.yml  docs.yml  lint.yml  tests.yml
docs/source/: conf.py  index.md  installation.md  quickstart.md
docs/source/api/: index.rst  model.rst  plot.rst  prior.rst  transport.rst
docs/source/tutorials/: index.md  pbmc_tutorial.ipynb
docs/source/user_guide/: data.md  interactions.md  keops.md  persistence.md  priors.md  transport.md
src/champollion/: __init__.py  _data.py  _iot.py  _optim.py  _ot.py  model.py  plot.py  prior.py  transport.py
tests/: test_champollion_api.py
tutorials/: cite_interpretability_tutorial.ipynb  pbmc_tutorial.ipynb
